--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,12 @@
         "php-http/curl-client": "^2.2",
         "symfony/yaml": "^3.2|^4.3|^5.0",
         "nesbot/carbon": "^2.0",
-        "illuminate/collections": "8.29.0",
         "guzzlehttp/psr7": "1.8.1",
         "psr/cache": "^1.0",
         "league/flysystem-memory": "^1.0",
         "cache/filesystem-adapter": "^1.0",
         "vlucas/phpdotenv": "^5.2",
-        "lcobucci/jwt": "^4.0@alpha",
+        "lcobucci/jwt": "^4.1.5",
         "http-interop/http-factory-guzzle": "^1.0"
     },
     "require-dev": {
